change /users authority, and add PUT /users in swagger
